--- a/openwhen.html
+++ b/openwhen.html
@@ -1,1 +1,53 @@
-<!doctype html><html lang='en'><head><meta charset='utf-8'/><meta name='viewport' content='width=device-width,initial-scale=1'/><title>Open When</title><link rel="stylesheet" href="styles.css"><script defer src="script.js"></script></head><body><div class="container"><div class="header"><div class="brand">Open‑When</div><nav class="nav"><a class="navlink" href="index.html">Home</a><a class="navlink" href="143.html">143 Reasons</a><a class="navlink" href="openwhen.html">Open‑When</a></nav></div><section class="section"><h2 class="h1">Open‑When</h2><div class="open-grid"><button class="open-btn" data-key="sad">Open when you're sad</button><button class="open-btn" data-key="lonely">Open when you're lonely</button><button class="open-btn" data-key="miss">Open when you miss me</button><button class="open-btn" data-key="doubt">Open when you doubt yourself</button><button class="open-btn" data-key="sleep">Open when you can't sleep</button><button class="open-btn" data-key="stressed">Open when you're stressed</button><button class="open-btn" data-key="needsmile">Open when you need a smile</button></div><div id="openDisplay" class="small-card" style="margin-top:12px;min-height:120px"></div><script id="openWhenData" type="application/json">{"sad": "If you're sad, breathe. Remember the Shell garage laugh. I'm one call away.", "lonely": "When you're lonely, hold this \u2014 our future mornings are coming.", "miss": "Imagine my arms, the small things. I'm with you in quiet moments.", "doubt": "Remember you kissed me, you stayed \u2014 you are brave. We will build our dreams.", "sleep": "Picture waves or city lights \u2014 breathe together, count to ten.", "stressed": "Make a small list: one thing I can help with, one thing you can let go.", "needsmile": "Remember the gum peck \u2014 the cutest test. Smile."}</script></section><div class="footer">Open‑When • ♥</div></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Open When – For My Bunny</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body class="page">
+    <div class="nav">
+        <a href="index.html">Home</a>
+        <a href="143.html">143</a>
+        <a href="timeline.html">Timeline</a>
+        <a href="shake.html">Shake</a>
+        <a href="openwhen.html" class="active">Open-When</a>
+        <a href="quiz.html">Quiz</a>
+        <a href="polaroid.html">Polaroids</a>
+        <a href="gift.html">Gift</a>
+        <a href="missme.html">Miss Me</a>
+    </div>
+
+    <h1 class="title">💌 Open When Letters</h1>
+    <p class="subtitle">Tap any button below and your message will appear.</p>
+
+    <!-- THE IMPORTANT JSON -->
+    <script id="openWhenData" type="application/json">
+    {
+        "sad": "My baby… you’re stronger than you think. I know things get heavy, but I’m holding your hand through all of it. Lean on me, cry with me, breathe with me. You’re never alone.",
+        "lonely": "If you’re feeling lonely, close your eyes for 5 seconds... think about my arms around you, my voice, my warmth. I’m with you even when I’m not physically next to you.",
+        "missme": "I miss you more than you think. More than I show. More than I say. And the second I see you again, I’m hugging you first.",
+        "doubt": "Baby, you are magic. You are capable. You are intelligent. You are powerful. Don’t doubt yourself — the world hasn’t even seen half your greatness yet.",
+        "cantSleep": "If you can’t sleep, rest your mind on me. Picture us cuddling, your head on my chest, my fingers brushing your hair… breathe slow, my love.",
+        "stressed": "Breathe baby… slow… slow… again… You’re going to get through this. I’m proud of how hard you try, even when you feel overwhelmed.",
+        "smile": "Here’s your smile: 😘🤍 You’re the most beautiful person I know — inside and out."
+    }
+    </script>
+
+    <div class="button-wrap">
+        <button class="open-btn" data-key="sad">Open when you're sad</button>
+        <button class="open-btn" data-key="lonely">Open when you're lonely</button>
+        <button class="open-btn" data-key="missme">Open when you miss me</button>
+        <button class="open-btn" data-key="doubt">Open when you doubt yourself</button>
+        <button class="open-btn" data-key="cantSleep">Open when you can't sleep</button>
+        <button class="open-btn" data-key="stressed">Open when you're stressed</button>
+        <button class="open-btn" data-key="smile">Open when you need a smile</button>
+    </div>
+
+    <div id="openDisplay" class="open-display"></div>
+
+    <script src="script.js"></script>
+</body>
+</html>
