--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>143 • Home</title><link rel="stylesheet" href="styles.css"><script defer src="script.js"></script></head><body><div class="container"><div class="header"><div class="brand">143 • For You</div><nav class="nav"><a class="navlink" href="index.html">Home</a><a class="navlink" href="143.html">143 Reasons</a><a class="navlink" href="timeline.html">Timeline</a><a class="navlink" href="polaroid.html">Polaroids</a><a class="navlink" href="paths.html">Paths</a><a class="navlink" href="openwhen.html">Open‑When</a><a class="navlink" href="quiz.html">Quiz</a><a class="navlink" href="gift.html">Gift</a></nav></div><section class="section"><h2 class="h1">Happy Birthday</h2><p class="hint">Welcome to your little Black & Gold galaxy. Click around — love in every pixel.</p><div class="small-card"><p><strong>First kiss at Westgate:</strong> You gave me a tiny peck with gum — cutest test ever.</p><p><strong>Park laugh:</strong> The Shell garage bathroom light cut out mid‑moment and we laughed until we cried.</p><p><strong>Goal:</strong> Build dreams together, make art, and live fully.</p></div></section><div class="footer">Made with ♥ — Theme: Black & Gold</div></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Aqeela 143 Bunny</title>
+  <link rel="stylesheet" href="styles.css?v=3">
+</head>
+<body>
+
+<div class="fade-in">
+  <h1 class="title">Aqeela, My 143 Bunny 🐰❤️</h1>
+
+  <div class="button-container">
+    <a href="reasons.html" class="btn">Reasons Why I Love You ❤️</a>
+    <a href="openwhen.html" class="btn">Open When... 💌</a>
+  </div>
+</div>
+
+<script src="script.js?v=3"></script>
+</body>
+</html>
