--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aqeela 143 Bunny</title>
-  <link rel="stylesheet" href="styles.css?v=3">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Aqeelah • 143</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <main class="center">
+    <h1 class="brand">Aqeelah — My 143 Bunny</h1>
+    <p class="sub">A little corner of the web made for you. Click anything. ❤️</p>
 
-<div class="fade-in">
-  <h1 class="title">Aqeela, My 143 Bunny 🐰❤️</h1>
+    <nav class="home-nav">
+      <a class="link" href="reasons.html">Reasons Why I Love You (143)</a>
+      <a class="link" href="openwhen.html">Open-When Letters</a>
+      <a class="link" href="polaroid.html" hidden>Polaroids (placeholder)</a>
+    </nav>
 
-  <div class="button-container">
-    <a href="reasons.html" class="btn">Reasons Why I Love You ❤️</a>
-    <a href="openwhen.html" class="btn">Open When... 💌</a>
-  </div>
-</div>
-
-<script src="script.js?v=3"></script>
+    <p class="tiny">Made with ♥ — Upload all files to GitHub Pages root</p>
+  </main>
 </body>
 </html>
